# Chip-8-Emulator

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
headers/: chip8.h  platform.h
src/: CMakeLists.txt  chip8.cpp  main.cpp  platform.cpp
